[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main/GameWindow.gd" type="Script" id=1]
[ext_resource path="res://font/kirby-classic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/main/Player1Grid.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 0.2
glow_strength = 0.3

[node name="GameWindow" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
editor/display_folded = true
margin_left = 6.0
margin_right = 581.0
margin_bottom = 1023.0

[node name="color" type="Button" parent="Control"]
margin_left = 41.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "r"

[node name="crashOn" type="Button" parent="Control"]
margin_left = 192.0
margin_top = 7.0
margin_right = 362.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "Crash off"

[node name="fire" type="Button" parent="Control"]
margin_left = 386.0
margin_top = 5.0
margin_right = 516.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Fire"

[node name="timer" type="Button" parent="Control"]
margin_left = 541.0
margin_top = 3.0
margin_right = 671.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 1 )
text = "Timer"

[node name="Player1Grid" parent="." instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="pressed" from="Control/color" to="." method="_on_color_pressed"]
[connection signal="pressed" from="Control/crashOn" to="." method="_on_crashOn_pressed"]
[connection signal="pressed" from="Control/fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="Control/timer" to="." method="_on_fire2_pressed"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
